# GL_exp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  script.nut  ui.nut  update.nut
Engine/: CMakeLists.txt
Engine/include/: Game.hpp  controls.hpp  test.hpp
Engine/include/content/: filesystem.hpp  textures.hpp
Engine/include/object/: GameObject.hpp  Mesh.hpp  Transform.hpp
Engine/include/rendering/: Camera.hpp  Shader.hpp
Engine/include/scripting/: squirrel.hpp
Engine/include/scripting/bindings/: game.hpp  gameobject.hpp  hud.hpp  rendercamera.hpp  transform.hpp  vec3.hpp  vector.hpp
Engine/include/ui/: elements.hpp  hud.hpp  text2d.hpp
Engine/src/: Game.cpp  controls.cpp  test.cpp
Engine/src/content/: filesystem.cpp  textures.cpp
Engine/src/object/: GameObject.cpp  Mesh.cpp  Transform.cpp
Engine/src/rendering/: Camera.cpp  Shader.cpp
Engine/src/scripting/: squirrel.cpp
Engine/src/scripting/bindings/: game.cpp  gameobject.cpp  hud.cpp  rendercamera.cpp  transform.cpp  vec3.cpp  vector.cpp
Engine/src/ui/: elements.cpp  hud.cpp  text2d.cpp
Game/src/: main.cpp
content/shaders/: frag_lit.glsl  frag_skybox.glsl  frag_text.glsl  frag_unlit.glsl  vert.glsl  vert_text.glsl
